v0/book/content/pages/source-code/apps/Campaigns/Home.md

# 
# Campaigns

## Namespaces

### \Hubleto\App\Community\Campaigns

#### Classes

| Class                                                            | Description |
|------------------------------------------------------------------|-------------|
| [`Calendar`](./classes/Hubleto/App/Community/Campaigns/Calendar) |             |
| [`Lib`](./classes/Hubleto/App/Community/Campaigns/Lib)           |             |
| [`Loader`](./classes/Hubleto/App/Community/Campaigns/Loader)     |             |
| [`Workflow`](./classes/Hubleto/App/Community/Campaigns/Workflow) |             |

### \Hubleto\App\Community\Campaigns\Controllers

#### Classes

| Class                                                                                          | Description |
|------------------------------------------------------------------------------------------------|-------------|
| [`Campaigns`](./classes/Hubleto/App/Community/Campaigns/Controllers/Campaigns)                 |             |
| [`ClickTracker`](./classes/Hubleto/App/Community/Campaigns/Controllers/ClickTracker)           |             |
| [`Recipients`](./classes/Hubleto/App/Community/Campaigns/Controllers/Recipients)               |             |
| [`RecipientStatuses`](./classes/Hubleto/App/Community/Campaigns/Controllers/RecipientStatuses) |             |

### \Hubleto\App\Community\Campaigns\Controllers\Api

#### Classes

| Class                                                                                                                | Description |
|----------------------------------------------------------------------------------------------------------------------|-------------|
| [`GetCampaignWarnings`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/GetCampaignWarnings)               |             |
| [`GetMailPreviewInfo`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/GetMailPreviewInfo)                 |             |
| [`Launch`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/Launch)                                         |             |
| [`LogActivity`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/LogActivity)                               |             |
| [`SaveRecipientsFromContacts`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/SaveRecipientsFromContacts) |             |
| [`SendTestEmail`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/SendTestEmail)                           |             |

### \Hubleto\App\Community\Campaigns\Extendibles

#### Classes

| Class                                                                                                  | Description |
|--------------------------------------------------------------------------------------------------------|-------------|
| [`AppMenu`](./classes/Hubleto/App/Community/Campaigns/Extendibles/AppMenu)                             |             |
| [`MailTemplateVariables`](./classes/Hubleto/App/Community/Campaigns/Extendibles/MailTemplateVariables) |             |

### \Hubleto\App\Community\Campaigns\Models

#### Classes

| Class                                                                                   | Description |
|-----------------------------------------------------------------------------------------|-------------|
| [`Campaign`](./classes/Hubleto/App/Community/Campaigns/Models/Campaign)                 |             |
| [`CampaignActivity`](./classes/Hubleto/App/Community/Campaigns/Models/CampaignActivity) |             |
| [`CampaignTask`](./classes/Hubleto/App/Community/Campaigns/Models/CampaignTask)         |             |
| [`Click`](./classes/Hubleto/App/Community/Campaigns/Models/Click)                       |             |
| [`Recipient`](./classes/Hubleto/App/Community/Campaigns/Models/Recipient)               |             |
| [`RecipientStatus`](./classes/Hubleto/App/Community/Campaigns/Models/RecipientStatus)   |             |

### \Hubleto\App\Community\Campaigns\Models\RecordManagers

#### Classes

| Class                                                                                                  | Description |
|--------------------------------------------------------------------------------------------------------|-------------|
| [`Campaign`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/Campaign)                 |             |
| [`CampaignActivity`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/CampaignActivity) |             |
| [`CampaignTask`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/CampaignTask)         |             |
| [`Click`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/Click)                       |             |
| [`BelongsToEmail`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/BelongsToEmail)     |             |
| [`Recipient`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/Recipient)               |             |
| [`RecipientStatus`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/RecipientStatus)   |             |
