v1/book/content/pages/source-code/apps/Campaigns/Home.md

# 
# Campaigns

## Namespaces

### \Hubleto\App\Community\Campaigns

#### Classes

| Class                                                            | Description |
|------------------------------------------------------------------|-------------|
| [`Calendar`](./classes/Hubleto/App/Community/Campaigns/Calendar) |             |
| [`Lib`](./classes/Hubleto/App/Community/Campaigns/Lib)           |             |
| [`Loader`](./classes/Hubleto/App/Community/Campaigns/Loader)     |             |
| [`Workflow`](./classes/Hubleto/App/Community/Campaigns/Workflow) |             |

### \Hubleto\App\Community\Campaigns\Controllers

#### Classes

| Class                                                                                          | Description |
|------------------------------------------------------------------------------------------------|-------------|
| [`Campaigns`](./classes/Hubleto/App/Community/Campaigns/Controllers/Campaigns)                 |             |
| [`ClickTracker`](./classes/Hubleto/App/Community/Campaigns/Controllers/ClickTracker)           |             |
| [`MailPreview`](./classes/Hubleto/App/Community/Campaigns/Controllers/MailPreview)             |             |
| [`Recipients`](./classes/Hubleto/App/Community/Campaigns/Controllers/Recipients)               |             |
| [`RecipientStatuses`](./classes/Hubleto/App/Community/Campaigns/Controllers/RecipientStatuses) |             |
| [`Unsubscribe`](./classes/Hubleto/App/Community/Campaigns/Controllers/Unsubscribe)             |             |

### \Hubleto\App\Community\Campaigns\Controllers\Api

#### Classes

| Class                                                                                                                  | Description |
|------------------------------------------------------------------------------------------------------------------------|-------------|
| [`GetCampaignLaunchInfo`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/GetCampaignLaunchInfo)             |             |
| [`GetCampaignTestInfo`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/GetCampaignTestInfo)                 |             |
| [`GetMailPreviewInfo`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/GetMailPreviewInfo)                   |             |
| [`ImportEmails`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/ImportEmails)                               |             |
| [`Launch`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/Launch)                                           |             |
| [`LogActivity`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/LogActivity)                                 |             |
| [`RemoveRecipientFromCampaign`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/RemoveRecipientFromCampaign) |             |
| [`SaveRecipientsFromContacts`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/SaveRecipientsFromContacts)   |             |
| [`SendTestEmail`](./classes/Hubleto/App/Community/Campaigns/Controllers/Api/SendTestEmail)                             |             |

### \Hubleto\App\Community\Campaigns\Extendibles

#### Classes

| Class                                                                                                  | Description |
|--------------------------------------------------------------------------------------------------------|-------------|
| [`AppMenu`](./classes/Hubleto/App/Community/Campaigns/Extendibles/AppMenu)                             |             |
| [`MailTemplateVariables`](./classes/Hubleto/App/Community/Campaigns/Extendibles/MailTemplateVariables) |             |

### \Hubleto\App\Community\Campaigns\Models

#### Classes

| Class                                                                                   | Description |
|-----------------------------------------------------------------------------------------|-------------|
| [`Campaign`](./classes/Hubleto/App/Community/Campaigns/Models/Campaign)                 |             |
| [`CampaignActivity`](./classes/Hubleto/App/Community/Campaigns/Models/CampaignActivity) |             |
| [`CampaignTask`](./classes/Hubleto/App/Community/Campaigns/Models/CampaignTask)         |             |
| [`Click`](./classes/Hubleto/App/Community/Campaigns/Models/Click)                       |             |
| [`Recipient`](./classes/Hubleto/App/Community/Campaigns/Models/Recipient)               |             |
| [`RecipientStatus`](./classes/Hubleto/App/Community/Campaigns/Models/RecipientStatus)   |             |

### \Hubleto\App\Community\Campaigns\Models\Migrations

#### Classes

| Class                                                                                                        | Description |
|--------------------------------------------------------------------------------------------------------------|-------------|
| [`Campaign_0001`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Campaign_0001)                 |             |
| [`Campaign_0002`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Campaign_0002)                 |             |
| [`Campaign_0003`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Campaign_0003)                 |             |
| [`Campaign_0004`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Campaign_0004)                 |             |
| [`CampaignActivity_0001`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/CampaignActivity_0001) |             |
| [`CampaignTask_0001`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/CampaignTask_0001)         |             |
| [`Click_0001`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Click_0001)                       |             |
| [`Click_0002`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Click_0002)                       |             |
| [`Recipient_0001`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Recipient_0001)               |             |
| [`Recipient_0002`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Recipient_0002)               |             |
| [`Recipient_0003`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Recipient_0003)               |             |
| [`Recipient_0004`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Recipient_0004)               |             |
| [`Recipient_0005`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/Recipient_0005)               |             |
| [`RecipientStatus_0001`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/RecipientStatus_0001)   |             |
| [`RecipientStatus_0002`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/RecipientStatus_0002)   |             |
| [`RecipientStatus_0003`](./classes/Hubleto/App/Community/Campaigns/Models/Migrations/RecipientStatus_0003)   |             |

### \Hubleto\App\Community\Campaigns\Models\RecordManagers

#### Classes

| Class                                                                                                  | Description |
|--------------------------------------------------------------------------------------------------------|-------------|
| [`Campaign`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/Campaign)                 |             |
| [`CampaignActivity`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/CampaignActivity) |             |
| [`CampaignTask`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/CampaignTask)         |             |
| [`Click`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/Click)                       |             |
| [`BelongsToEmail`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/BelongsToEmail)     |             |
| [`Recipient`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/Recipient)               |             |
| [`RecipientStatus`](./classes/Hubleto/App/Community/Campaigns/Models/RecordManagers/RecipientStatus)   |             |
